style: change background-color of drop-down navbar for better readability og the menu-items, update nav-links to fix nav-link not stying active for subpages, update heading of subpages from <h2> to <h1> for better ratio of page elements, change container to container-fluid for all subpages to space out content

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -12,6 +12,10 @@ h2, h3 {
     font-family: "Indie Flower", cursive;
 }
 
+.heading {
+    color:#333 !important;
+}
+
 header {
     height: 10vh;
     background-color: #333;
@@ -62,12 +66,26 @@ section {
 }
 
 /* Navbar */
-nav {
+.navbar {
+    padding-bottom: 1rem;
     display: flex;
     justify-content: space-between;
     align-items: center;
     margin: auto;
     padding: 0 0.5em;
+    position: relative;
+    z-index: 1000;
+}
+
+.navbar-collapse {
+    background-color: rgba(51, 51, 51, 0.7);
+    width: 100%;
+    padding: 0;
+    transition: all 0.3s ease-in-out;
+}
+
+.navbar-nav .nav-item {
+    margin-left: 1rem;
 }
 
 li.nav-item a {
@@ -82,16 +100,16 @@ li.nav-item a:hover{
     color: #f8f9fa !important;
 }
 
-button.navbar-toggler {
-    border-color: #f8f9fa !important;
-}
-
 .navbar-toggler-icon {
     filter: invert(1);
 }
 
+button.navbar-toggler {
+    border-color: #f8f9fa !important;
+}
+
 ul.dropdown-menu.show {
-    background-color:#333 !important;
+    background-color:rgba(51, 51, 51, 0.7) !important;
 }
 
 .login-status {
@@ -105,7 +123,7 @@ ul.dropdown-menu.show {
     background-image: url('/static/images/background.jpeg');
     background-size: cover;
     background-position: center center;
-    min-height: 90vh;
+    min-height: 95vh;
     background-color: rgba(0, 0, 0, 0.3);
     color: #370a0a;
     text-align: center;
@@ -159,12 +177,6 @@ ul.dropdown-menu.show {
     opacity: 1;
 }
 
-
-/* About page */
-.about_header {
-    color:#333 !important;
-}
-
 /* Card Spacing and Responsiveness */
  .card {
     border: none;
@@ -199,13 +211,6 @@ footer {
 /* Media Query */
   
 @media (min-width: 768px) {
-
-    /* hero section */
-    .hero {
-        background-color: rgba(0, 0, 0, 0.3);
-        height: 95vh;
-    }
-
     .hero-content {
         max-width: 70%;
         margin-top: 6.25rem;
@@ -229,8 +234,6 @@ footer {
 }
 
 @media (min-width: 1200px) {
-    
-    /* Hero Section */
     .container{
         margin-bottom: 18.75rem;
     }
